# MindCheck

./: README.md  package.json  pnpm-lock.yaml
apps/api/: package.json  pyproject.toml  requirements.txt
apps/api/app/: main.py
apps/api/app/core/: auth.py  config.py
apps/api/app/routers/: assessments.py  checkins.py  scores.py
apps/api/app/schemas/: assessment.py  checkin.py
apps/api/app/services/: scoring.py  supabase.py
apps/dashboard/: package.json  tsconfig.json
apps/dashboard/app/: layout.tsx  page.tsx
apps/dashboard/lib/supabase/: browser.ts  server.ts
apps/mobile/: app.json  package.json  tailwind.config.js  tsconfig.json
apps/mobile/app/: _layout.tsx  index.tsx
apps/mobile/lib/: supabase.ts
supabase/: config.toml
supabase/migrations/: 20260425000001_initial_schema.sql  20260425000002_rls_policies.sql  20260425000003_seed_mbi_ss.sql
